Compile for Java 1.8